chore: fix env example placeholders

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ DATABASE_URL="mysql://user:password@host:3306/parada"
 JWT_SECRET="troque-esta-chave-secreta-muito-grande"
 NODE_ENV="development"
 PORT=3333
-PIX_SERVER_CORS="https://paradadoespetinho.com,https://www.paradadoespetinho.com,https://parada-do-espetinho.vercel.app"
-FRONTEND_URL="https://paradadoespetinho.com"
-VITE_APP_URL="https://paradadoespetinho.com"
+PIX_SERVER_CORS="https://paradadoespetinho.com,https://www.paradadoespetinho.com,https://parada-do-espetinho.vercel.app,http://localhost:5173"
+FRONTEND_URL="http://localhost:5173"
+VITE_APP_URL="http://localhost:5173"
 VERCEL_URL=""
 VERCEL_PROJECT_PRODUCTION_URL=""
 SEED_ADMIN_EMAIL="admin@paradadoespetinho.com"
