--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.554.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
