--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jose": "^5.1.2",
+    "mercadopago": "^2.10.1",
     "morgan": "^1.10.0",
     "otplib": "^12.0.1",
     "zod": "^3.23.8"
@@ -36,8 +38,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "prisma": "^5.10.2",
     "prettier": "^3.2.5",
+    "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.15.0",
