feat: add Snyk Security Extension rules to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ pnpm-lock.yaml
 package-lock.json
 yarn.lock
 .vscode
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
